--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   carousel_slider: ^4.2.1
   animated_bottom_navigation_bar: ^1.3.0
   line_icons: ^2.0.3
+  dots_indicator: ^3.0.0
 
 dev_dependencies:
   flutter_test:
